--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -69,11 +69,10 @@
 
 <body>
   <main class="app">
-    <h1 class="app_title">waterApp</h1>
+    <h1 class="app__title">waterApp</h1>
     <div class="glass">
-      <span class="glass_counter glass__counter--js">0</span>
+      <span class="glass__counter glass__counter--js">0</span>
     </div>
-
     <button class="button-add button-add--js">add glass</button>
     <button class="button-remove button-remove--js">remove glass</button>
   </main>
